# DualSPHysics_HIP

./: CHANGES.txt  README.md
examples/chrono/11_CurrentWheelPulley/: CaseCurrentWheelPulley_Def.xml  CaseCurrentWheel_Def.xml
examples/inletoutlet/01_FlowCylinder/: CaseFlowCylinder_Re020_Def.xml  CaseFlowCylinder_Re200_Def.xml
examples/inletoutlet/02_OpenChannel/: CaseOpenChannel_Re100_Def.xml
examples/inletoutlet/03_ReverseFlow/: CaseReverseFlow_Def.xml
examples/inletoutlet/04_Waves2D/: CaseWaves2D_Def.xml
examples/inletoutlet/07_CurrentHull/: CaseCurrentHull_Def.xml
examples/main/01_DamBreak/CaseDambreakVal2D_out/: CaseDambreakVal2D.bi4  CaseDambreakVal2D.out  CaseDambreakVal2D.xml  CaseDambreakVal2D_All.vtk  CaseDambreakVal2D_Bound.vtk  CaseDambreakVal2D_Fluid.vtk  CaseDambreakVal2D_MkCells.vtk  CfgGauge_InitPoints.vtk  CfgInit_Domain.vtk  CfgInit_MapCells.vtk  GaugesSWL_Swl_x02.csv  GaugesSWL_Swl_z003.csv  Run.out
examples/main/01_DamBreak/CaseDambreakVal2D_out/data/: GaugesSWL_Swl_x02_0000.vtk  GaugesSWL_Swl_x02_0001.vtk  GaugesSWL_Swl_z003_0000.vtk  GaugesSWL_Swl_z003_0001.vtk  PartInfo.ibi4  PartOut_000.obi4  Part_0000.bi4  Part_0001.bi4  Part_Head.ibi4
examples/main/01_DamBreak/CaseDambreakVal2D_out/particles/: PartBound_0000.vtk  PartFluid_0000.vtk  PartFluid_0001.vtk
examples/main/01_DamBreak/CaseDambreakVal2D_out/surface/: Slices_0000.vtk  Slices_0001.vtk
examples/main/01_DamBreak/CaseDambreak_out/: CaseDambreak.out  CaseDambreak.xml  CaseDambreak_Bound.vtk  CaseDambreak_Box_Dp.vtk  CaseDambreak_Building_Dp.vtk  CaseDambreak_MkCells.vtk  CfgInit_Domain.vtk  CfgInit_MapCells.vtk  Run.out
examples/main/01_DamBreak/CaseDambreak_out/data/: PartInfo.ibi4  PartOut_000.obi4  Part_Head.ibi4
src/: comandosHIP.txt
src/source/: CMakeLists.txt  FunctionsBasic_iker.h  FunctionsHip.cpp  JCellDivGpu.cpp  JCellDivGpuSingle.cpp  JCellDivGpuSingle.h  JCellDivGpuSingle_ker.hip  JCellSearch_iker.h  JDebugSphGpu.h  JDsPips.h  JDsPips_ker.hip  JRadixSort.cpp  JRelaxZone_ker.h  JRelaxZone_ker.hip  JSph.cpp  JSphCpu.cpp  JSphGpu.cpp  JSphGpu.h  JSphGpuSimple_ker.h  JSphGpuSimple_ker.hip  JSphGpu_InOut_iker.h  JSphGpu_InOut_iker.hip  JSphGpu_ker.hip  JSphInOutGridData.cpp  JWaveOrder2_ker.h  TypesDef.h
src/src_CUDA/source/: DualSphDef.h  Functions.cpp  FunctionsBasic_iker.h  JCellDivDataGpu.h  JCellSearch_iker.h  JDsFixedDt.h  JSph.h  JSphGpu.cpp  JSphGpuSimple_ker.cu  JSphGpuSingle.cpp  JSphGpu_ker.h
src/src_HIPv01/: hip_actualizado.txt
src/src_HIPv01/source/: FunSphEos_iker.h  FunSphKernel_iker.h  FunctionsMath_iker.h  JArraysGpu.cpp  JCellDivGpuSingle_ker.h  JCellDivGpu_ker.h  JCellDivGpu_ker.hip  JChronoObjects.cpp  JDebugSphGpu.cpp  JDsAccInput.h  JDsAccInput_ker.hip  JDsGaugeItem.cpp  JDsGaugeItem.h  JDsGauge_ker.h  JDsGauge_ker.hip  JDsPips.cpp  JDsPips_ker.h  JObjectGpu.cpp  JObjectGpu.h  JReduSum_ker.hip  JRelaxZonesGpu.cpp  JSphGpuSingle.cpp  JSphGpuSingle_InOut.cpp  JSphInOut.cpp  JSphInOut.h  JSphInOutZone.cpp  JSphInOutZone.h  JSphShifting.cpp  JSphShifting.h  JSphShifting_ker.hip  JTimerCuda.h  JWaveOrder2_ker.hip  OmpDefs.h  main.cpp
src/src_HIPv02/source/: CMakeLists.txt  FunctionsCuda.cpp  FunctionsCuda.h  JCellDivGpu_ker.hip  JDsGauge_ker.cu.hip  JReduSum_ker.cu.hip  JRelaxZone_ker.cu.hip  JSphGpu.h  JSphGpuSimple_ker.hip  JSphGpu_InOut_iker.cu.hip  JSphGpu_InOut_iker.h  JSphGpu_ker.h  JSphGpu_ker.hip  JSphShifting_ker.cu.hip  JWaveOrder2_ker.cu.hip  Makefile
src/src_HIPv03/source/: CMakeLists.txt  FunctionsGeo3d_iker.h  FunctionsHip.cpp  JCellDivDataGpu.h  JCellDivGpu.cpp  JCellDivGpuSingle.cpp  JCellDivGpuSingle_ker.hip  JDebugSphGpu.cpp  JDebugSphGpu.h  JDsAccInput_ker.h  JDsGaugeItem.cpp  JDsGaugeItem.h  JDsGaugeSystem.cpp  JDsPips.cpp  JMLPistonsGpu.cpp  JReduSum_ker.h  JSphCpu.cpp  JSphGpu.cpp  JSphGpu.h  JSphGpuSingle.cpp  JSphGpu_InOut_iker.h  JSphGpu_InOut_iker.hip  JSphGpu_ker.h  JSphInOutGridData.cpp  JSphInOutGridData.h  JSphShifting_ker.h  JWaveSpectrumGpu.cpp  TypesDef.h
src_mphase/DSPH_v4.0_LiquidGas/source/: CMakeLists.txt  JCellDivGpuSingle_ker.cu.hip  JCellDivGpu_ker.hip  JSphGpu_ker.cu.hip  JSphGpu_ker.hip
src_mphase/DSPH_v5.0_NNewtonian/source/: DualSphDef.h  JCellDivGpu_ker.hip  JDsAccInput_ker.hip  JDsPips_ker.cu.hip  JSphGpuSimple_ker.cu.hip  JSphGpu_InOut_iker.hip  JSphGpu_NN_.h  JSphGpu_NN_ker.hip  JSphGpu_ker.h  JSphGpu_ker.hip  OmpDefs.h
